# oop_labs

./: .gitignore  .~lock.Report.docx#  CMakeLists.txt  Report.docx  a.out  myself.cpp  run.sh
src/: a.out  base_exception.h  main.cpp
src/abilities/: ability_manager.cpp  ability_manager.h  base_ability.h  double_damage_ability.cpp  double_damage_ability.h  exceptions.h  random_attack_ability.cpp  random_attack_ability.h  scanner_ability.cpp  scanner_ability.h
src/entities/field/: exceptions.h  field.cpp  field.h
src/entities/ship/: ship.cpp  ship.h
src/entities/ship_segment/: ship_segment.cpp  ship_segment.h
src/game/: game.cpp  game.h  game_state.cpp  game_state.h
src/managers/ability_manager/: ability_manager.cpp  ability_manager.h  exceptions.h
src/managers/game_manager/: game_manager.cpp  game_manager.h
src/managers/ship_manager/: ship_manager.cpp  ship_manager.h
